--- a/.codesandbox/tasks.json
+++ b/.codesandbox/tasks.json
@@ -1,7 +1,21 @@
 {
   // These tasks will run in order when initializing your CodeSandbox project.
-  "setupTasks": [],
+  "setupTasks": [
+    {
+      "name": "y",
+      "command": "yarn"
+    }
+  ],
 
   // These tasks can be run from CodeSandbox. Running one will open a log in the app.
-  "tasks": {}
+  "tasks": {
+    "yarn dev": {
+      "name": "yarn dev",
+      "command": "yarn dev",
+      "runAtStart": true,
+      "preview": {
+        "port": 3000
+      }
+    }
+  }
 }
